--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html><html lang="es">
 <head>
+	<meta name="google-site-verification" 
+		content="uoGshlR79GwTb7JLAqpl1ZkWKdvXw-zmD3C-1CmBV6Q" />
 	<meta charset="UTF-8">
 	<title>The Chosen</title>
 	<style>
