--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 	    						https://www.justwatch.com/mx/serie/the-chosen-0?utm_source=chatgpt.com<br><br>
 	    						Audio<br>
 	    						https://youtu.be/LqDShzeb06M?si=wYTf2UKufWFLNbJP<br><br>
+							NO TIENE FINES LUCRATIVOS ES PARA PASAR MI TAREA
 	    					</P>
 	    						<footer>
 	    							<p>&copy; Brandon Ulises Lopez Lopez 4L Ofimatica </p>
